- Fixed the align of the loading dialogs.

--- a/fcc-twitch/css/style.css
+++ b/fcc-twitch/css/style.css
@@ -7,5 +7,8 @@
 }
 
 .loading{
-    position: fixed;
+    min-height: 70vh;
+    margin: 0 auto;
+    position: relative;   
+    align-content: center;
 }
